--- a/packages/TesterApp/package.json
+++ b/packages/TesterApp/package.json
@@ -36,6 +36,7 @@
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
     "eslint": "7.30.0",
+    "hermes-engine-cli": "^0.9.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.64.0",
     "terser-webpack-plugin": "^5.1.3",
