--- a/packages/TesterApp/android/app/build.gradle
+++ b/packages/TesterApp/android/app/build.gradle
@@ -78,9 +78,10 @@ import com.android.build.OutputFile
  */
 
 project.ext.react = [
-    enableHermes: true,  // clean and rebuild if changing
+    enableHermes: false,  // clean and rebuild if changing
     bundleCommand: "webpack-bundle",
-    bundleInDebug: false
+    bundleInDebug: false,
+    bundleInRelease: true
 ]
 
 apply from: "../../node_modules/react-native/react.gradle"
